[package]
name = "identicon"
version = "0.3.0"
authors = ["David Graham <david.malcom.graham@gmail.com>", "j4ger <xiayuxuan@live.com>"]
description = "A port of GitHub's identicon algorithm to Rust."
# repository = "https://github.com/dgraham/identicon"
license = "MIT"
edition = "2021"

[lib]
name = "identicon"

[dependencies]
image = { version = "0.24.7", default-features = false, features = ["png"] }
